# PathVLM-LiteBench

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: patch_coordinate_heatmap_demo_config.json  patch_coordinate_heatmap_prompt_set_demo_config.json  patch_coordinate_heatmap_scoring_demo_config.json  prompt_sensitivity_demo_config.json  retrieval_demo_config.json  zero_shot_demo_config.json  zero_shot_mhist_clip_sample.json  zero_shot_mhist_plip_sample.json  zero_shot_prompt_grid_mhist_sample.json
docs/: clip_plip_conch_mhist_prompt_grid_observation.md  clip_plip_conch_mhist_sampled_observation.md  clip_vs_plip_mhist_observation.md  clip_vs_plip_mhist_protocol.md  conch_feasibility_check.md  data_preparation.md  imagefolder_quickstart.md  mhist_baseline_observation.md  patch_coordinate_heatmap_workflow.md  plip_feasibility_check.md  project_positioning.md  prompt_grid_workflow.md  prompt_scored_coordinate_heatmap_workflow.md  prompt_set_coordinate_heatmap_workflow.md  public_patch_benchmark_workflow.md  real_patch_workflow.md  release_checklist_v0.1.0.md  release_checklist_v0.10.0.md  release_checklist_v0.2.0.md  release_checklist_v0.3.0.md  release_checklist_v0.3.1.md  release_checklist_v0.4.0.md  release_checklist_v0.4.1.md  release_checklist_v0.5.0.md  release_checklist_v0.6.0.md  release_checklist_v0.7.0.md  release_checklist_v0.8.0.md  release_checklist_v0.9.0.md  release_notes_v0.1.0.md  release_notes_v0.10.0.md  release_notes_v0.11.0.md  release_notes_v0.14.0.md  release_notes_v0.14.1.md  release_notes_v0.2.0.md  release_notes_v0.3.0.md  (+30 more)
(+100 files in other folders)
