[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pathvlm-litebench"
version = "0.3.0"
description = "A lightweight toolkit for benchmarking and visualizing vision-language models in computational pathology."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "PathVLM-LiteBench Contributors" }
]
keywords = [
    "computational pathology",
    "vision-language model",
    "CLIP",
    "retrieval",
    "zero-shot classification",
    "prompt sensitivity",
    "medical AI"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "numpy",
    "pandas",
    "pillow",
    "matplotlib",
    "scikit-learn",
    "torch",
    "torchvision",
    "transformers",
    "tqdm",
]

[project.scripts]
pathvlm-litebench = "pathvlm_litebench.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "jupyter",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pathvlm_litebench*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
